crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__shell_multiple_commands.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "&result.into_string()"
---
---
command: echo 'first' && echo 'second'
exit_code: 0
---
<stdout>
first
second

</stdout>
