crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__shell_stderr_with_success.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "&result.into_string()"
---
---
command: echo 'to stderr' >&2; echo 'to stdout'
exit_code: 0
---
<stdout>
to stdout
</stdout>
<stderr>
to stderr
</stderr>
