crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__test_shell_pwd.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&result.into_string())"
---
---
command: pwd
exit_code: 0
---
<stdout>
[TEMP_DIR]
</stdout>
